04-networking/17-ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-production-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "64M"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  
  tls:
  - hosts:
    - laravel.lib
    secretName: laravel-tls-secret
    
  rules:
  - host: laravel.lib
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-frontend-service
            port:
              number: 80
