04-networking/14-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-mysql-database
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: mysql  # تأكد إن دي اللابيل بتاعت الداتابيز عندك
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: laravel-backend
    ports:
    - protocol: TCP
      port: 3306
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-laravel-backend
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: laravel-backend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx-frontend
    ports:
    - protocol: TCP
      port: 9000
  egress:
  # 1. السماح بالتواصل مع الداتابيز
  - to:
    - podSelector:
        matchLabels:
          app: mysql
    ports:
    - protocol: TCP
      port: 3306
  # 2. السماح بالوصول للـ DNS (إجباري عشان اسم السيرفس يشتغل)
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
